TODO completed simplified method